# AdventOfCode

./: .gitignore  Makefile  README.md  day11.py  day12.cpp  day12.py  day13.py  day15.py  day3.cpp  day4.cpp  day6.cpp  day8.cpp  day9.cpp  day9.py
.vscode-sample-config/: README.md  launch.json  tasks.json
2018/: Common.hs  Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Main.hs  day10.py  day14.py  day15.py  day17.py  day2.cpp  day3.cpp  day7.cpp  x2018.cabal
2018-delete-me/: Common.hs  Day7.hs
2018-old/: day1.cpp  day16.py  day5.cpp
2018/app/: Common.hs  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Main.hs
2018/input/: day6.txt
2019/: 1.py  10.py  11.py  12.py  13.py  14-refined.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.py  23.py  24.py  25.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  intcode.py
2020/: bits-and-bobs.hh  day1.cc  day10.cc  day11.cc  day12.cc  day13.cc  day14.cc  day15.cc  day16.cc  day17.cc  day18.cc  day19.cc  day2.cc  day20.cc  day21.cc  day22.cc  day23.cc  day24.cc  day25.cc  day3.cc  day4.cc  day5.cc  day6.cc  day7.cc  day8.cc  day9.cc
2021/: x2021.cabal
2021/app/: Common.hs  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Main.hs
2021/input/: day24-notes.txt
