cabal-version:      2.4
name:               x2018
version:            0.1.0.0

author:             AusCoder
maintainer:         sebmuellermath@gmail.com

executable x2018
    main-is:          Main.hs
    other-modules:    Common
                    , Day1
                    , Day2
                    , Day3
                    , Day4
    build-depends:    base ^>=4.14.3.0
                    , parsec
                    , mtl
                    , text
                    , containers
                    , time
    hs-source-dirs:   app
    default-language: Haskell2010
