cabal-version:      2.4
name:               x2021
version:            0.1.0.0

author:             AusCoder

executable x2021
    main-is:          Main.hs
    other-modules:    Common
                    , Day1
                    , Day2
    build-depends:    base ^>=4.14.3.0
                    , parsec
                    , mtl
                    , text
                    , containers
                    , unordered-containers
                    , time
    hs-source-dirs:   app
    default-language: Haskell2010
