cabal-version:      2.4
name:               x2021
version:            0.1.0.0

author:             AusCoder

executable x2021
    main-is:          Main.hs
    other-modules:    Common
                    , Day1
                    , Day2
                    , Day3
                    , Day4
                    , Day5
                    , Day6
                    , Day7
                    , Day8
                    , Day9
                    , Day10
                    , Day11
                    , Day12
                    , Day13
                    , Day14
                    , Day15
                    , Day16
                    , Day17
                    , Day18
                    , Day19
                    , Day20
                    , Day21
                    , Day22
                    , Day23
                    , Day24
                    , Day25
    build-depends:    base ^>=4.14.3.0
                    , parsec
                    , mtl
                    , text
                    , containers
                    , unordered-containers
                    , time
                    , sort
                    , heaps
                    , hashable
                    , array
    hs-source-dirs:   app
    default-language: Haskell2010
